# backend_app

./: .env  Cargo.toml
src/: config.rs  db.rs  main.rs  state.rs
src/controllers/: auth_controller.rs  chat_controller.rs  mod.rs
src/models/: mod.rs  user.rs
src/routes/: chat_routes.rs  mod.rs  user_routes.rs
src/services/: auth_service.rs  mod.rs
