[package]
name = "my_app"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"  # For managing environment variables (optional)
log = "0.4"
env_logger = "0.10"
bcrypt = "0.11"
jsonwebtoken = "8.2"
chrono = "0.4"
rand = "0.8"
lettre = { version = "0.10", features = ["smtp-transport", "builder"] }
mongodb = { version = "2.3", features = ["tokio-runtime"] }
serde_json = "1.0"
futures = "0.3"
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }